changelogs/SkiaSharp.Views/3.116.0/SkiaSharp.Views.Android.breaking.md
# API diff: SkiaSharp.Views.Android.dll

## SkiaSharp.Views.Android.dll

> Assembly Version Changed: 3.116.0.0 vs 2.88.0.0

### Namespace SkiaSharp.Views.Android

#### Type Changed: SkiaSharp.Views.Android.Resource

#### Removed Type SkiaSharp.Views.Android.Resource.Attribute
#### Removed Type SkiaSharp.Views.Android.Resource.Styleable

#### Type Changed: SkiaSharp.Views.Android.SKCanvasView

Removed method:

```csharp
[Obsolete ("Use OnPaintSurface(SKPaintSurfaceEventArgs) instead.")]
protected virtual void OnDraw (SkiaSharp.SKSurface surface, SkiaSharp.SKImageInfo info);
```


#### Type Changed: SkiaSharp.Views.Android.SKGLSurfaceView

Removed method:

```csharp
[Obsolete ("Use PaintSurface instead.")]
public virtual void SetRenderer (SKGLSurfaceView.ISKRenderer renderer);
```


#### Type Changed: SkiaSharp.Views.Android.SKGLSurfaceViewRenderer

Removed method:

```csharp
[Obsolete ("Use OnPaintSurface(SKPaintGLSurfaceEventArgs) instead.")]
protected virtual void OnDrawFrame (SkiaSharp.SKSurface surface, SkiaSharp.GRBackendRenderTargetDesc renderTarget);
```


#### Type Changed: SkiaSharp.Views.Android.SKGLTextureView

Removed method:

```csharp
[Obsolete ("Use PaintSurface instead.")]
public virtual void SetRenderer (SKGLTextureView.ISKRenderer renderer);
```


#### Type Changed: SkiaSharp.Views.Android.SKGLTextureViewRenderer

Removed method:

```csharp
[Obsolete ("Use OnPaintSurface(SKPaintGLSurfaceEventArgs) instead.")]
protected virtual void OnDrawFrame (SkiaSharp.SKSurface surface, SkiaSharp.GRBackendRenderTargetDesc renderTarget);
```


#### Removed Type SkiaSharp.Views.Android.Extensions

